--- a/app/assets/stylesheets/remocons.css.scss
+++ b/app/assets/stylesheets/remocons.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the Remocon controller here.
+// Place all the styles related to the Remocons controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
